添加工具类：MysqlUtil  DateUtil  在jmeter.properties文件中添加连接数据库的信息

--- a/bin/jmeter.properties
+++ b/bin/jmeter.properties
@@ -1271,3 +1271,7 @@ jmeter.reportgenerator.apdex_tolerated_threshold=1500
 # Switch that allows using Local documentation opened in JMeter GUI
 # By default we use Online documentation opened in Browser
 #help.local=false
+jdbcDriver=com.mysql.jdbc.Driver
+url=jdbc:mysql://ip:port/dbName?useUnicode=true&characterEncoding=UTF8
+user=dbproxy
+password=dbproxy
