修改.gitignore,忽略本地jmeter.properties文件提交

--- a/bin/jmeter.properties
+++ b/bin/jmeter.properties
@@ -1272,6 +1272,6 @@ jmeter.reportgenerator.apdex_tolerated_threshold=1500
 # By default we use Online documentation opened in Browser
 #help.local=false
 jdbcDriver=com.mysql.jdbc.Driver
-url=jdbc:mysql://ip:port/dbName?useUnicode=true&characterEncoding=UTF8
-user=dbproxy
-password=dbproxy
+url=jdbc:mysql://10.6.26.148:3306/ofotester?useUnicode=true&characterEncoding=UTF8
+user=
+password=
