、Caused by: java.io.FileNotFoundException: rmi_keystore.jks (没有那个文件或目录),解决方法：修改jmeter.properites:server.rmi.ssl.disable=true，关闭ssl功 2、添加从节点启动ip port入库功能

--- a/bin/jmeter.properties
+++ b/bin/jmeter.properties
@@ -245,7 +245,7 @@ remote_hosts=127.0.0.1
 #remote_hosts=localhost:1099,localhost:2010
 
 # RMI port to be used by the server (must start rmiregistry with same port)
-#server_port=1099
+server_port=1099
 
 # To change the port to (say) 1234:
 # On the server(s)
@@ -317,7 +317,7 @@ remote_hosts=127.0.0.1
 #server.rmi.ssl.truststore.password=changeit
 #
 # Set this if you don't want to use SSL for RMI
-#server.rmi.ssl.disable=false
+server.rmi.ssl.disable=true
 #---------------------------------------------------------------------------
 #         Include Controller
 #---------------------------------------------------------------------------
